CLOSED - task 7: Support Linux in the scripts http://github.com/d3scomp/JDEECo/issues/issue/7
Plus some polishing of the Ant build.xml file.